--- a/SportsApp/Views/Base.lproj/Main.storyboard
+++ b/SportsApp/Views/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HN9-9E-54P">
-                                <rect key="frame" x="165" y="367" width="89" height="40"/>
+                                <rect key="frame" x="163" y="433" width="89" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <state key="normal" title="Navigate"/>
@@ -27,15 +27,24 @@
                                     <segue destination="qxn-Ia-eCA" kind="push" identifier="nav" id="axN-SB-peo"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KCb-Vm-Qch">
+                                <rect key="frame" x="131" y="351" width="171" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <navigationItem key="navigationItem" id="svb-F3-ezb"/>
+                    <connections>
+                        <outlet property="textFaield" destination="KCb-Vm-Qch" id="Pic-rK-NhM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1161" y="892"/>
+            <point key="canvasLocation" x="1160.8695652173915" y="891.84782608695662"/>
         </scene>
         <!--League Events View Controller-->
         <scene sceneID="bcy-ZA-GdT">
@@ -302,7 +311,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="G1P-mb-w9O">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="heart" catalog="system" id="Uh8-NE-wxD">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="ff" id="Uh8-NE-wxD">
                             <connections>
                                 <action selector="addToFavourite:" destination="qxn-Ia-eCA" id="LyE-Qw-aG5"/>
                             </connections>
@@ -334,9 +343,8 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.069541178643703461" green="0.19431370496749878" blue="0.051444403827190399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DJU-Ku-8mi">
-                                <rect key="frame" x="20" y="119.5" width="374" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DJU-Ku-8mi">
+                                <rect key="frame" x="20" y="164" width="374" height="524"/>
                                 <color key="backgroundColor" red="0.66693359613418579" green="0.90824025869369507" blue="0.47291165590286255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="kIq-gM-K4L">
                                     <size key="itemSize" width="175" height="174"/>
@@ -353,13 +361,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bLb-E4-4MU">
-                                                    <rect key="frame" x="8" y="8" width="167" height="109"/>
+                                                    <rect key="frame" x="11" y="20" width="144" height="97"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hs1-2C-NRW">
                                                     <rect key="frame" x="19" y="125" width="135" height="27"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -376,6 +384,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nja-pJ-pi7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nja-pJ-pi7" firstAttribute="trailing" secondItem="DJU-Ku-8mi" secondAttribute="trailing" constant="20" id="TW6-5Q-0Gj"/>
+                            <constraint firstItem="DJU-Ku-8mi" firstAttribute="leading" secondItem="nja-pJ-pi7" secondAttribute="leading" constant="20" id="cCP-pT-K6n"/>
+                            <constraint firstAttribute="bottom" secondItem="DJU-Ku-8mi" secondAttribute="bottom" constant="48" id="dHs-aa-ikz"/>
+                            <constraint firstItem="DJU-Ku-8mi" firstAttribute="top" secondItem="nja-pJ-pi7" secondAttribute="top" constant="120" id="hgr-9g-lXU"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="fVL-8B-OG0"/>
                     <connections>
@@ -385,7 +399,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7U1-b1-Qgx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1161" y="59"/>
+            <point key="canvasLocation" x="1160.8695652173915" y="58.695652173913047"/>
         </scene>
         <!--Favourite-->
         <scene sceneID="Ws4-ec-zJD">
@@ -394,14 +408,53 @@
                     <view key="view" contentMode="scaleToFill" id="N3F-Zx-MVe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nSj-GJ-EGw">
+                                <rect key="frame" x="20" y="44" width="374" height="643"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="640-D4-Cse">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="640-D4-Cse" id="Y7g-n5-jEE">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K5F-t7-f6i">
+                                                    <rect key="frame" x="17" y="16" width="70" height="71"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C0j-b4-rI3">
+                                                    <rect key="frame" x="107" y="41" width="138" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oZi-fY-tmN">
+                                                    <rect key="frame" x="281" y="29" width="62" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="GS1-L6-n79"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nSj-GJ-EGw" firstAttribute="bottom" secondItem="GS1-L6-n79" secondAttribute="bottom" id="S3g-m1-zhH"/>
+                            <constraint firstItem="GS1-L6-n79" firstAttribute="trailing" secondItem="nSj-GJ-EGw" secondAttribute="trailing" constant="20" id="dNT-6M-m2b"/>
+                            <constraint firstItem="nSj-GJ-EGw" firstAttribute="top" secondItem="GS1-L6-n79" secondAttribute="top" id="pUp-8G-GDV"/>
+                            <constraint firstItem="nSj-GJ-EGw" firstAttribute="leading" secondItem="GS1-L6-n79" secondAttribute="leading" constant="20" id="xkD-1o-7Yg"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Favourite" image="heart" catalog="system" id="nJM-gE-bI4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pVr-1h-tRG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2123" y="-531"/>
+            <point key="canvasLocation" x="2121.739130434783" y="-531.52173913043487"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ugU-Lf-Fpc">
@@ -434,15 +487,16 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="csN-1H-bOa" kind="relationship" relationship="rootViewController" id="Bbh-wd-KMi"/>
+                        <segue destination="csN-1H-bOa" kind="relationship" relationship="rootViewController" id="ZIn-1S-yBY"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVE-NV-ZWC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-946" y="-366"/>
+            <point key="canvasLocation" x="-981" y="-342"/>
         </scene>
     </scenes>
     <resources>
+        <image name="ff" width="24" height="24"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="homekit" catalog="system" width="128" height="106"/>
         <systemColor name="systemBackgroundColor">
